<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Wellness Journal</string>

    <!-- Navigation/ Page titles -->
    <string name="title_welcome">Welcome</string>
    <string name="title_home">Home</string>
    <string name="title_timer">Timer</string>
    <string name="title_fitness">Fitness</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_journal">Journal</string>

    <!-- Welcome Screen -->
    <string name="Hello">Hello!</string>
    <string name="welcome_message">Welcome to Wellness Journal, where you can customize fitness
        tracking and journaling all in one place.</string>
    <string name="btn_begin">Begin</string>

    <!-- Image content descriptions -->
    <string name="logo_weight_description">Logo weight</string>
    <string name="exercise_equipment_image">Exercise equipment image</string>
    <string name="logo_weight_image">Logo weight image</string>

    <!-- Timer Screen -->
    <string name="timer_icon">Timer icon</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="enter_hours">00</string>
    <string name="enter_minutes">00</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">STOP TIMER</string>
    <string name="colon">:</string>
    <string name="enter_seconds">00</string>
    <string name="title_timer_colon">Timer:</string>
    <string name="timer_finished">Timer Finished!</string>
    <string name="hours_no_colon">Hours</string>
    <string name="minutes_no_colon">Minutes</string>
    <string name="seconds_no_colon">Seconds</string>

    <!-- Exercise related -->
    <string name="item_text">List item</string>
    <string name="add_button">Add button</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="intensity">Intensity:</string>
    <string name="volume">Volume:</string>
    <string name="notes">Notes:</string>
    <string name="notes_no_colon">Notes</string>
    <string name="save">Save</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="exercise_intensity">e.g. RPE 4, 15 lbs, 65% HRmax, etc.</string>
    <string name="exercise_volume">e.g. 2 sets 10 reps, etc.</string>
    <string name="exercise_notes">Exercise Notes</string>
    <string name="exercise_time">e.g. 30 min, 30 s, etc.</string>
    <string name="exercise_time_prompt">Exercise Time/ Duration</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_add_exercise">Add Exercise</string>
    <string name="title_update_exercise">Update Exercise</string>
    <string name="exercise_part_of_workout_msg">This exercise is part of a saved workout and cannot be deleted</string>

    <!-- Buttons -->
    <string name="delete">Delete</string>
    <string name="delete_reflection_journal">Delete</string>

    <!-- Workout related -->
    <string name="title_workouts">Workouts</string>
    <string name="add_workout_instructions">Select the exercises you would like to add to your workout:</string>
    <string name="name_workout_instructions">Name your new workout:</string>
    <string name="workout_name">Workout name</string>
    <string name="workout_notes">Workout notes</string>
    <string name="update_workout_name">Workout Name:</string>
    <string name="update_workout_instructions">Exercises for this workout:</string>
    <string name="log_workout">Log workout</string>
    <string name="title_workout_logs">Workout Logs</string>
    <string name="week_workout_data_msg">Days with logged workouts this week:</string>
    <string name="workout_notes_title">Workout Notes</string>
    <string name="title_add_workout">Add Workout</string>
    <string name="title_update_workout">Update Workout</string>
    <string name="title_play_workout">Complete Workout</string>
    <string name="last_workout_msg">The last saved workout cannot be deleted</string>
    <string name="log_details">Log Details</string>
    <string name="log_date">Log date</string>

    <!-- Journal related -->
    <string name="example_date">2/20/2024</string>
    <string name="example_journal_entry">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="journal_entry">Journal entry</string>
    <string name="journal_icon">journal icon</string>
    <string name="title_reflection_journal">Journal</string>
    <string name="title_goals">Goals</string>
    <string name="enter_goal_description">Enter your goal</string>
    <string name="title_add_reflection_journal">Add Journal Entry</string>
    <string name="title_update_reflection_journal">Update Journal Entry</string>
    <string name="title_add_goal">Add Goal</string>
    <string name="title_update_goal">Update Goal</string>

    <!-- Days of the week -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- image descriptions -->
    <string name="green_checkmark">green checkmark</string>
    <string name="journal_image">journal image</string>

    <!-- Keyboard Symbols -->
    <string name="dash">-</string>

    <!-- Exercise Types for spinner -->
    <string-array name="exercise_types_stringarray">
        <item>Aerobic Exercise</item>
        <item>Resistance Training</item>
        <item>Stretching</item>
        <item>Balance</item>
        <item>Other</item>
    </string-array>

</resources>