<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_color_variant3"
    tools:context=".ui.fitness.workouts.UpdateWorkoutFragment"
    android:id="@+id/update_workout_scrollview">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/banner_msg"
            android:gravity="center"
            android:textColor="#70662C"
            android:elevation="@dimen/card_elevation"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            style="@style/style_header3"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/info_color"
            android:text="@string/last_workout_msg"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/update_workout_title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_update_workout"
            android:layout_margin="@dimen/text_margin"
            style="@style/style_header2"
            app:layout_constraintTop_toBottomOf="@id/banner_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            />

        <TextView
            android:id="@+id/name_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/update_workout_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:gravity="center"
            android:text="@string/update_workout_name"
            style="@style/style_header3"
            />

        <EditText
            android:id="@+id/input_workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:autofillHints="Exercise Name"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:hint="@string/workout_name"
            android:inputType="textMultiLine"
            android:textColorHint="@color/hint_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_workout"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/update_workout_instructions_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_workout_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:text="@string/update_workout_instructions"
            style="@style/style_header3"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exercises_for_workout_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/workout_list_item"
            android:layout_marginBottom="@dimen/bottom_margin"
            app:layout_constraintTop_toBottomOf="@id/update_workout_instructions_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_exercise_note"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/min_height"
            android:text="@string/notes"
            style="@style/style_header3"
            app:layout_constraintTop_toBottomOf="@+id/exercises_for_workout_recyclerView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_margin="@dimen/text_margin"
            />

        <EditText
            android:id="@+id/input_workout_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:autofillHints="Exercise Notes"
            android:backgroundTint="@color/primary_color"
            android:gravity="center"
            android:hint="@string/workout_notes"
            android:inputType="textMultiLine"
            android:textColorHint="@color/hint_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exercise_note"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/btn_delete_workout"
            style="@style/btn_danger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_workout_note"
            android:layout_marginTop="@dimen/delete_top_margin"
            app:layout_constraintVertical_bias="0"/>

        <Button
            android:id="@+id/btn_save_workout"
            style="@style/btn_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_save_and_delete_btns"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:paddingHorizontal="20dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/btn_delete_workout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>